--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--  @aaa Angular Material icons css include -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+<!--   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" /> -->
   <style>body { font-family: Roboto, Arial, sans-serif; }</style>
 </head>
 <body>
