--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
 <!--   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" /> -->
   <style>body { font-family: Roboto, Arial, sans-serif; }</style>
+<!--   <script src="../node_modules/chart.js/src/chart.js"></script> -->
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
